src/test/compile-fail/blind-item-block-item-shadow.rs
// Copyright 2015 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

mod foo { pub struct Bar; }

fn main() {
    {
        struct Bar;
        use foo::Bar;
        //~^ ERROR a type named `Bar` has already been defined in this block
    }
}
